<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>877</width>
    <height>662</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>My Text Editor</string>
  </property>
  <property name="windowIcon">
   <iconset resource="resources.qrc">
    <normaloff>:/icons/icons/TextEditor.png</normaloff>:/icons/icons/TextEditor.png</iconset>
  </property>
  <property name="toolButtonStyle">
   <enum>Qt::ToolButtonIconOnly</enum>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="1">
     <widget class="QMdiArea" name="mdiArea">
      <property name="background">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
         <red>156</red>
         <green>156</green>
         <blue>156</blue>
        </color>
       </brush>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>877</width>
     <height>22</height>
    </rect>
   </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="MinimumExpanding" vsizetype="Minimum">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="nativeMenuBar">
    <bool>true</bool>
   </property>
   <widget class="QMenu" name="file">
    <property name="title">
     <string>Файл</string>
    </property>
    <widget class="QMenu" name="menu">
     <property name="title">
      <string>Открыть</string>
     </property>
     <property name="icon">
      <iconset resource="resources.qrc">
       <normaloff>:/icons/icons/open.png</normaloff>:/icons/icons/open.png</iconset>
     </property>
     <addaction name="open"/>
     <addaction name="open_read_only"/>
    </widget>
    <addaction name="menu"/>
    <addaction name="save"/>
    <addaction name="actionPrint"/>
   </widget>
   <addaction name="file"/>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <widget class="QToolBar" name="toolBar">
   <property name="windowTitle">
    <string>toolBar</string>
   </property>
   <property name="iconSize">
    <size>
     <width>36</width>
     <height>36</height>
    </size>
   </property>
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
   <addaction name="actionNewWindow"/>
   <addaction name="actionUndo"/>
   <addaction name="actionRedo"/>
   <addaction name="separator"/>
   <addaction name="actionCopyFormat"/>
   <addaction name="actionAlignment"/>
   <addaction name="actionAlLeft"/>
   <addaction name="actionAlCentr"/>
   <addaction name="actionAlRight"/>
   <addaction name="actionAlWidth"/>
   <addaction name="actionPaste"/>
   <addaction name="actionDateTime"/>
   <addaction name="actionaddTable"/>
   <addaction name="actionSettings"/>
   <addaction name="actionFont"/>
   <addaction name="actionDayNight"/>
   <addaction name="actionFullScreen"/>
   <addaction name="actionAbout"/>
   <addaction name="separator"/>
   <addaction name="actionExit"/>
  </widget>
  <action name="save">
   <property name="checkable">
    <bool>false</bool>
   </property>
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/icons/saveas.png</normaloff>:/icons/icons/saveas.png</iconset>
   </property>
   <property name="text">
    <string>Сохранить</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+S</string>
   </property>
  </action>
  <action name="actionFullScreen">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/icons/fullScreen.png</normaloff>:/icons/icons/fullScreen.png</iconset>
   </property>
   <property name="text">
    <string>FullScreen</string>
   </property>
   <property name="shortcut">
    <string>F11</string>
   </property>
   <property name="shortcutContext">
    <enum>Qt::WindowShortcut</enum>
   </property>
  </action>
  <action name="actionUndo">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/icons/undo.png</normaloff>:/icons/icons/undo.png</iconset>
   </property>
   <property name="text">
    <string>Undo</string>
   </property>
   <property name="toolTip">
    <string>Отменить</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+Z</string>
   </property>
   <property name="shortcutContext">
    <enum>Qt::WindowShortcut</enum>
   </property>
  </action>
  <action name="actionRedo">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/icons/redo.png</normaloff>:/icons/icons/redo.png</iconset>
   </property>
   <property name="text">
    <string>Redo</string>
   </property>
   <property name="toolTip">
    <string>Повторить</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+Shift+Z</string>
   </property>
   <property name="shortcutContext">
    <enum>Qt::WindowShortcut</enum>
   </property>
  </action>
  <action name="actionAbout">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/icons/about.png</normaloff>:/icons/icons/about.png</iconset>
   </property>
   <property name="text">
    <string>About</string>
   </property>
   <property name="toolTip">
    <string>О программе</string>
   </property>
   <property name="shortcut">
    <string>F1</string>
   </property>
  </action>
  <action name="open">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/icons/open.png</normaloff>:/icons/icons/open.png</iconset>
   </property>
   <property name="text">
    <string>Открыть</string>
   </property>
  </action>
  <action name="open_read_only">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/icons/open.png</normaloff>:/icons/icons/open.png</iconset>
   </property>
   <property name="text">
    <string>Только для чтения</string>
   </property>
  </action>
  <action name="actionExit">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/icons/exit.png</normaloff>:/icons/icons/exit.png</iconset>
   </property>
   <property name="text">
    <string>Exit</string>
   </property>
   <property name="toolTip">
    <string>Выход</string>
   </property>
  </action>
  <action name="actionDayNight">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/icons/classic.png</normaloff>:/icons/icons/classic.png</iconset>
   </property>
   <property name="text">
    <string>DayNight</string>
   </property>
   <property name="toolTip">
    <string>День/Ночь</string>
   </property>
  </action>
  <action name="actionSettings">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/icons/settings.png</normaloff>:/icons/icons/settings.png</iconset>
   </property>
   <property name="text">
    <string>Settings</string>
   </property>
   <property name="toolTip">
    <string>Настройки</string>
   </property>
  </action>
  <action name="actionPrint">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/icons/print.png</normaloff>:/icons/icons/print.png</iconset>
   </property>
   <property name="text">
    <string>Print</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+P</string>
   </property>
  </action>
  <action name="actionNewWindow">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/icons/newWindow.png</normaloff>:/icons/icons/newWindow.png</iconset>
   </property>
   <property name="text">
    <string>NewWindow</string>
   </property>
   <property name="toolTip">
    <string>Новое окно</string>
   </property>
  </action>
  <action name="actionaddTable">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/icons/pasteTable.png</normaloff>:/icons/icons/pasteTable.png</iconset>
   </property>
   <property name="text">
    <string>Таблица</string>
   </property>
   <property name="toolTip">
    <string>Вставить таблицу</string>
   </property>
  </action>
  <action name="actionFont">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/font.png</normaloff>:/icons/font.png</iconset>
   </property>
   <property name="text">
    <string>Font</string>
   </property>
   <property name="toolTip">
    <string>Шрифт</string>
   </property>
  </action>
  <action name="actionCopyFormat">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/icons/copy_format.png</normaloff>:/icons/icons/copy_format.png</iconset>
   </property>
   <property name="text">
    <string>CopyFormat</string>
   </property>
   <property name="toolTip">
    <string>Копировать формат текста</string>
   </property>
  </action>
  <action name="actionAlignment">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/alignment_left.png</normaloff>:/icons/alignment_left.png</iconset>
   </property>
   <property name="text">
    <string>Alignment</string>
   </property>
   <property name="toolTip">
    <string>Выравнивание</string>
   </property>
  </action>
  <action name="actionAlRight">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/alignment_right.png</normaloff>:/icons/alignment_right.png</iconset>
   </property>
   <property name="text">
    <string>AlRight</string>
   </property>
   <property name="toolTip">
    <string>По правому краю</string>
   </property>
  </action>
  <action name="actionAlLeft">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/alignment_left.png</normaloff>:/icons/alignment_left.png</iconset>
   </property>
   <property name="text">
    <string>AlLeft</string>
   </property>
   <property name="toolTip">
    <string>По левому краю</string>
   </property>
  </action>
  <action name="actionAlCentr">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/alignment_center.png</normaloff>:/icons/alignment_center.png</iconset>
   </property>
   <property name="text">
    <string>AlCentr</string>
   </property>
   <property name="toolTip">
    <string>По середине</string>
   </property>
  </action>
  <action name="actionAlWidth">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/alignment.png</normaloff>:/icons/alignment.png</iconset>
   </property>
   <property name="text">
    <string>AlWidth</string>
   </property>
   <property name="toolTip">
    <string>По ширине</string>
   </property>
  </action>
  <action name="actionDateTime">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/icons/dateTime.png</normaloff>:/icons/icons/dateTime.png</iconset>
   </property>
   <property name="text">
    <string>Дата/Время</string>
   </property>
  </action>
  <action name="actionPaste">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/icons/paste.png</normaloff>:/icons/icons/paste.png</iconset>
   </property>
   <property name="text">
    <string>Paste</string>
   </property>
   <property name="toolTip">
    <string>Вставить</string>
   </property>
  </action>
 </widget>
 <resources>
  <include location="resources.qrc"/>
 </resources>
 <connections/>
</ui>
